--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.4.0",
     "markdown-it-footnote": "^3.0.2",
     "vuepress": "^1.4.0"
+  },
+  "dependencies": {
+    "ant-design-vue": "^1.5.3"
   }
 }
