--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.4.0",
+    "ant-design-vue": "^1.5.3",
+    "core-js": "^2.6.11",
     "markdown-it-footnote": "^3.0.2",
     "vuepress": "^1.4.0"
   },
-  "dependencies": {
-    "ant-design-vue": "^1.5.3"
-  }
+  "dependencies": {}
 }
