--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ant-design-vue": "^1.5.3",
     "core-js": "^2.6.11",
     "markdown-it-footnote": "^3.0.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "vuepress": "^1.4.0"
   },
   "dependencies": {}
