--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,8 @@ on:
   release:
     types:
       - published
-      - created
-      - edited
+      # - created
+      # - edited
       - prereleased
 
 jobs:
@@ -15,11 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # - name: Build & Push Docker Image
-    #   uses: docker/build-push-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKER_USERNAME }}
-    #     password: ${{ secrets.DOCKER_PASSWORD }}
-    #     repository: lucienzhangzl/website
-    #     tags: latest
-    #     tag_with_ref: true
+    - name: Build & Push Docker Image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: lucienzhangzl/website
+        tags: latest
+        tag_with_ref: true
