--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "markdown-it-footnote": "^3.0.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "vuepress": "^1.4.0"
+    "vuepress": "^1.4.0",
+    "vuepress-plugin-mathjax": "^1.2.8"
   },
   "dependencies": {}
 }
