--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.4.0",
     "ant-design-vue": "^1.5.3",
+    "babel-plugin-import": "^1.13.0",
     "core-js": "^2.6.11",
     "markdown-it-footnote": "^3.0.2",
     "node-sass": "^4.13.1",
@@ -16,5 +17,8 @@
     "vuepress": "^1.4.0",
     "vuepress-plugin-mathjax": "^1.2.8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.19.2",
+    "signature_pad": "^3.0.0-beta.3"
+  }
 }
