--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "check-md": "vuepress check-md docs"
   },
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.4.0",
@@ -15,6 +16,7 @@
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "vuepress": "^1.4.0",
+    "vuepress-plugin-check-md": "^0.0.2",
     "vuepress-plugin-mathjax": "^1.2.8"
   },
   "dependencies": {
