--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "cheerio": "^1.0.0-rc.3",
+    "highcharts": "^8.1.2",
+    "highcharts-vue": "^1.3.5",
     "markdown-it-pangu": "^1.0.2",
     "signature_pad": "^3.0.0-beta.3",
     "vue-tabs-component": "^1.5.0",
