--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "cheerio": "^1.0.0-rc.3",
+    "d3": "3.5",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
     "markdown-it-pangu": "^1.0.2",
+    "nvd3": "^1.8.6",
     "signature_pad": "^3.0.0-beta.3",
     "vue-tabs-component": "^1.5.0",
     "vuepress-plugin-code-copy": "^1.0.6",
