--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "highcharts-vue": "^1.3.5",
     "markdown-it-pangu": "^1.0.2",
     "nvd3": "^1.8.6",
+    "pseudocode": "^2.2.0",
     "signature_pad": "^3.0.0-beta.3",
     "vue-tabs-component": "^1.5.0",
     "vuepress-plugin-code-copy": "^1.0.6",
