--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.5.3",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^2.6.11",
+    "expose-loader": "^0.7.5",
     "markdown-it-footnote": "^3.0.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
@@ -22,10 +23,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "browser": "^0.2.6",
     "cheerio": "^1.0.0-rc.3",
     "d3": "3.5",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
+    "jquery": "^3.5.1",
     "markdown-it-pangu": "^1.0.2",
     "nvd3": "^1.8.6",
     "pseudocode": "^2.2.0",
