--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^8.0.2",
     "vuepress": "^1.4.0",
     "vuepress-plugin-check-md": "^0.0.2",
+    "vuepress-plugin-element-tabs": "^0.2.8",
     "vuepress-plugin-mathjax": "^1.2.8"
   },
   "dependencies": {
@@ -35,9 +36,6 @@
     "pseudocode": "^2.2.0",
     "signature_pad": "^3.0.0-beta.3",
     "typed.js": "^2.0.11",
-    "vue-lazyload": "^1.3.3",
-    "vue-tabs-component": "^1.5.0",
-    "vuepress-plugin-code-copy": "^1.0.6",
-    "vuepress-plugin-tabs": "^0.3.0"
+    "vuepress-plugin-code-copy": "^1.0.6"
   }
 }
