--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-import": "^1.13.0",
     "core-js": "^2.6.11",
     "markdown-it-footnote": "^3.0.2",
+    "markdown-it-multimd-table": "^4.0.3",
     "node-sass": "^4.13.1",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
