--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "nvd3": "^1.8.6",
     "pseudocode": "^2.2.0",
     "signature_pad": "^3.0.0-beta.3",
+    "three": "^0.136.0",
     "typed.js": "^2.0.11",
-    "vuepress-plugin-code-copy": "^1.0.6"
+    "vuepress-plugin-code-copy": "^1.0.6",
+    "web-ifc-three": "^0.0.102"
   }
 }
